# Kratos_Agentic

./: .gitignore  README.md  multi_agent_ai_system_revised_master_plan_v_2.md
backend/: config.yaml  pyproject.toml  requirements.txt
backend/api/: main.py  schemas.py
backend/api/routes/: audio.py  chat.py  health.py  images.py  plugins.py
backend/api/websocket/: streaming.py
backend/core/: __init__.py  config.py  model_manager.py  orchestrator.py  plugin_base.py  plugin_manager.py  plugin_registry.py  vram_monitor.py
backend/plugins/cognitive/: __init__.py  base_cognitive.py  complexity_detector.py  embedding_agent.py  entity_extractor.py  intent_classifier.py  semantic_search.py  sql_builder.py
backend/plugins/humanization/: __init__.py  base_humanizer.py  phi_humanizer.py
backend/plugins/input/: __init__.py  audio_input.py  base_input.py  image_input.py  text_input.py  video_input.py
backend/plugins/memory/: base_memory.py  confidence_decay.py  vector_memory.py
backend/plugins/output/: __init__.py  audio_output.py  base_output.py  text_output.py
backend/plugins/reasoning/: __init__.py  base_reasoning.py  council_coordinator.py  phi_reasoner.py  qwen_reasoner.py
backend/utils/: complexity_heuristics.py  sql_validator.py  streaming.py
frontend/: package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src/components/: AudioRecorder.css  AudioRecorder.tsx  AudioVisualizer.css  AudioVisualizer.tsx  CouncilVisualization.css  CouncilVisualization.tsx  MessageList.css  MessageList.tsx  (+4 more)
(+6 files in other folders)
